# mxqcore

./: .gitignore  CMakeLists.txt  README.md
include/: list.h  mxq.h  mxq_pthreadpool.h  mxq_queue.h
src/: CMakeLists.txt  mxq_pthreadpool.c  mxq_queue.c
test/: CMakeLists.txt  test_pthreadpool.c  test_queue.c
